--- a/Prework/src/App.css
+++ b/Prework/src/App.css
@@ -1,42 +1,66 @@
 #root {
+  /* max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center; */
+}
+
+.mainContent {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 2rem;
+  border-bottom: 3px solid darkslateblue;
+  padding-right: 200px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.creatorverse-logo {
+  font-size: 60px;
+  background-image: linear-gradient(45deg, indigo, darkslateblue, mediumslateblue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.addCreator {
+  margin-top: 10px;
+  color: #646cff;
+}
+.addCreator:hover {
+  color: rgb(60, 0, 128);
 }
 
-.card {
-  padding: 2em;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-.read-the-docs {
-  color: #888;
+button {
+  margin: auto;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  transition: background-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+  background-color:darkslateblue;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
