--- a/Prework/src/App.css
+++ b/Prework/src/App.css
@@ -78,6 +78,23 @@
   width: auto;
 }
 
+.creator-image {
+  width: 200px;
+  height: 200px;
+  border-radius: 15px;
+  box-shadow: 5px 5px 15px rgba(47, 81, 194, 0.3);
+}
+
+.creator-description {
+  font-size: 25px;
+}
+
+.creatorButtons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 60px;
+}
+
 a {
   text-decoration: none;
   color: inherit;
