--- a/Prework/src/App.css
+++ b/Prework/src/App.css
@@ -78,6 +78,32 @@
   width: auto;
 }
 
+.currentCreator {
+  background-image: linear-gradient(45deg, rgb(34, 78, 182), rgb(99, 53, 148), rgb(127, 53, 196));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.individualCreatorDescription {
+  width: 100%;
+  text-align: center;
+}
+
+.individualCreatorURL {
+  background-image: linear-gradient(45deg, rgb(121, 57, 205), rgb(54, 90, 168), rgb(144, 53, 196));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.creatorWidgets {
+  display: flex;
+  justify-content: center;
+}
+
+.individualCreatorButton {
+  margin: 0px 20px 0px 20px;
+}
+
 .creator-image {
   width: 200px;
   height: 200px;
